update compose file to build from the dock file
update compose file to build from the dock file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   dotnet:
-    image: mzain/dotnet 
+    build: ./
     ports:
       - "6060:80"
     container_name: dotnet
